<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ApplicationBase</string>
    <string name="title">PlastProd</string>
    <string name="action_add_db">insertion db</string>
    <string name="app_description">Android drawer icon with material design animation</string>
    <string name="drawer_open">drawer_open</string>
    <string name="home">Accueil</string>
    <string name="drawer_close">drawer_close</string>
    <string name="forgot_password">Mot de passe oublié ?</string>
    <string name="mail">Adresse mail</string>
    <string name="password">Mot de passe</string>
    <string name="connection">Connexion</string>
    <string name="remember_me">Se souvenir de moi</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Mon compte</item>
        <item>Accueil</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item></item>
        <item>@drawable/abc_btn_radio_material</item>
    </array>

</resources>
