<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_color"
    tools:context=".AuthentificationActivity">


    <LinearLayout
        android:id="@+id/form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/titleBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title"
            android:textColor="@android:color/white"
            android:textSize="27sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/mailEdit"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittextshape"
            android:ems="10"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:textColorHighlight="@android:color/white" />

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittextshape"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHighlight="@android:color/white" />

        <TextView
            android:id="@+id/forgotText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/connectButton"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:text="@string/connection"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

</RelativeLayout>
